Sun Feb  4 16:35:21 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* awkgram.y (field_spec, opt_incdec): New terminals.
	(variable): Change definition of field reference to use field_spec.
	See test/parse1.awk.

Thu Feb  1 17:38:38 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* main.c: Allow YYDEBUG to enable the `-D' option, not just
	GAWKDEBUG.

Wed Jan 31 19:30:26 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* node.c (format_val): Restore my test for numeric values
	being representable, as it includes more conditions than
	Andrew's, pending a thorough review of undealt-with emails on
	the topic.
	* regexec.c (proceed_next_node): Move check for NULL to after
	variable declarations inside initial `if'.

Wed Jan 31 19:25:21 2007  Andrew J. Schorr <ajschorr@users.sourceforge.net>

	* configure.ac (getaddrinfo): Improve test, since this function
	can be in libsocket on some systems.

Mon Jan 29 15:33:10 2007  Andrew J. Schorr <ajschorr@users.sourceforge.net>

	* Makefile.am (valgrind): Also call new valgrind-scan target.

Mon Jan 29 12:44:54 2007  Andreas Schwab  <schwab@suse.de>

	* dfa.c (copytoks): Adjust index into multibyte csets when
	copying an MBCSET token.

Fri Jan 26 20:01:38 2007  Andrew J. Schorr <ajschorr@users.sourceforge.net>

	* node.c (format_val): Test whether a numeric value is integral
	simply by converting it to long and then back again, and checking
	if the value matches.  That's more robust than trying to test
	whether the floating-point value is representable as a long.
	* builtin.c (format_tree): Fix buffer overflow bug, off-by-one errors
	in checking snprintf return codes, and use "%.0f" to implement "%d"
	formatting.  For octal or hex formatting, test whether the value
	is integral by trying to convert back to floating point and seeing
	if the value matches.  This is more robust than trying to test
	whether the floating-point value is representable as an integer.

Tue Jan 23 17:49:28 2007  Arnold D. Robbins  <arnold@skeeve.com>
