@@ -1,3 +1,9 @@
+Mon Mar 19 19:54:42 UTC 2007 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	* .savannah, ChangeLog, node.c(format_val):
+	Sync with savannah gawk cvsps 55.
+	Arnold restructured a bit to remove need for and use of goto.
+
 Mon Mar 19 19:15:15 UTC 2007 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
 	* .savannah, ChangeLog, awkgram.y:
