@@ -1,3 +1,8 @@
+Tue Feb  6 14:33:51 2007  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* node.c (format_val): Restructure a bit to remove need for and
+	use of goto.
+
 Sun Feb  4 16:35:21 2007  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* awkgram.y (field_spec, opt_incdec): New terminals.
